Updating style.css (navbar ul size) and game.js (stopgap for login)

--- a/styles/style.css
+++ b/styles/style.css
@@ -23,7 +23,7 @@ html, body{
 }
 
 .navigation_bar li{
-    min-width: 80px;
+    min-width: 110px;
 }
 
 .navbar_horz {
